assets/css/styles.css
/* ... */
.section__subtitle {
  display: block;
  font-size: var(--small-font-size);
  margin-bottom: var(--mb-3);
}

.section__title, 
.section__subtitle {
  text-align: center;
}

/*==================== LAYOUT ====================*/
.container {
  max-width: 100%;
  margin-left: var(--mb-1-5);
  margin-right: var(--mb-1-5);
  padding: 0 1rem;
}

.grid {
  display: grid;
  gap: 1.5rem;
}

.header {
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  z-index: var(--z-fixed);
  background-color: var(--body-color);
}

/*==================== NAV ====================*/
.nav{
  max-width: 968px;
  height: var(--header-height);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav__logo,
.nav__toggle{
  color: var(--title-color);
  font-weight: var(--font-medium);
}

.nav__logo:hover{
  color: var(--first-color);
}

.nav__toggle{
  font-size: 1.1rem;
  cursor: pointer;
}

.nav__toggle:hover{
  color: var(--first-color);
}

@media screen and (max-width: 767px) {
  .nav__menu{
    position: fixed;
    bottom: -100%;
    left: 0;
    width: 100%;
    background-color: var(--body-color);
    padding: 2rem 1.5rem 4rem;
    box-shadow: 0 -1px 4px rgba(0,0,0,.15);
    border-radius: 1.5rem 1.5rem 0 0;
    transition: .3s;
    z-index: var(--z-fixed);
  }

  .nav__list {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 1rem;
  }

  .nav__link {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: var(--small-font-size);
    color: var(--title-color);
    font-weight: var(--font-medium);
  }

  .nav__icon {
    font-size: 1.2rem;
    margin-bottom: var(--mb-0-25);
  }
}

.nav__list{
  grid-template-columns: repeat(3, 1fr);
  gap: 2rem;
}

.nav__link{
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: var(--small-font-size);
  color: var(--title-color);
  font-weight: var(--font-medium);
}

.nav__link:hover{
  color: var(--first-color);
}

.nav__icon{
  font-size: 1.2rem;
}

.nav__close{
  position: absolute;
  right: 1.3em;
  bottom: .5rem;
  font-size: 1.5rem;
  cursor: pointer;
  color: var(--first-color);
}

.nav__close:hover{
  color: var(--first-color-alt);
}


/* show menu */
.show-menu{
  bottom: 0;
}

/* Active link */
.active-link{
  color: var(--first-color);
}

/* Change background header */
.scroll-header{
  box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
}

/*==================== HOME ====================*/
.home__container{
  gap: 1rem;
}

.home__content{
  grid-template-columns: .5fr 3fr;
  padding-top: 3.5rem;
  align-items: center;
}

.home__social{
  display: grid;
  grid-template-columns: max-content;
  row-gap: 1rem;
}

.home__social-icon{
  font-size: 1.25rem;
  color: var(--first-color);
}

.home__social-icon:hover{
  color: var(--first-color-alt);
}

.home__blob{
  width: 200px;
  fill: var(--first-color);
}

.home__blob-img{
  width: 170px;
}

.home__data{
  grid-column: 1/3;
}

.home__titke{
  font-size: var(--big-font-size);
}

.home__subtitle{
  font-size: var(--h3-font-size);
  color: var(--text-color);
  font-weight: var(--font-medium);
  margin-bottom: var(--mb-0-75);
}

.home__description{
  text-align: justify;
  text-justify: inter-word;
  margin-bottom: var(--mb-2);
}

.home__scroll{
   display: none;
}

.home__scroll-button{
  color: var(--first-color);
  transition: .3s;
}

.home__scroll-button:hover{
  transform: translateY(.25rem);
}

.home__scroll-mouse{
  font-size: 2rem;
}

.home__scroll-name{
  font-size: var(--small-font-size);
  color: var(--title-color);
  font-weight: var(--font-medium);
  margin-right: var(--mb-0-25);
}

.home__scroll-arrow{
  font-size: 1.25rem;
}

@media screen and (max-width: 767px) {
  .home__content {
    grid-template-columns: 1fr;
    text-align: center;
    padding-top: 2rem;
  }

  .home__blob {
    width: 270px;
    margin: 0 auto;
  }

  .home__social {
    justify-content: center;
    margin-top: 2rem;
  }

  .home__scroll {
    display: none;
  }
}

/*==================== BUTTONS ====================*/
.button{
  display: inline-block;
  background-color: var(--first-color);
  color: #FFF;
  padding: 1rem;
  border-radius: .5rem;
  font-weight: var(--font-medium);
}

.button:hover{
  background-color: var(--first-color-alt);
}

.button__icon{
  font-size: 1.25rem;
  margin-left: var(--mb-0-5);
  transition: .3s;
}
.button__iconsmall{
  font-size: 1rem;
  margin-left: var(--mb-0-5);
  transition: .3s;
}

.button--white{
  background-color: #FFF;
  color: var(--first-color);
}

.button--white:hover{
  background-color: #FFF;
  /* color: var(--first-color); */
}

.button--flex{
  display: inline-flex;
  align-items: center;
}

.button--small{
  padding: .75rem 1rem;
}

.button--link{
  padding: 0;
  background-color: transparent;
  color: var(--first-color);
}

.button--link:hover{
  background-color: transparent;
  color: var(--first-color-alt);
}


/*==================== ABOUT ====================*/
.about__img{
  width: 350px;
  border-radius: .5rem;
  justify-self: center;
  align-self: center;
}

.about__description{
  text-align: justify;
  margin-bottom: var(--mb-2-5);
  margin-top: 2.65rem;
}


.about__info{
  display: flex;
  justify-content: space-evenly;
  margin-bottom: var(--mb-2-5);
}

.about__info-name{
  font-size: var(--smaller-font-size);
}

.about__info-title{
  font-size: var(--h2-font-size);
  font-weight: var(--font-semi-bold);
  color: var(--title-color);
}

.about__info-title,
.about__info-name{
  display: block;
  text-align: center;
}


.about__buttons{
  display: flex;
  justify-content: center;
}

@media screen and (max-width: 767px) {
  .about__container {
    grid-template-columns: 1fr;
    text-align: center;
  }

  .about__img {
    width: 250px;
    margin: 0 auto;
  }

  .about__info {
    justify-content: center;
  }

  .about__buttons {
    justify-content: center;
  }
}

/*==================== SKILLS ====================*/
.skills__container{
  row-gap: 0;
}
/* ... */

